############################################
# Changelog of the check_nwc_health plugin #
############################################

2013-08-27 2.3
- add Juniper IVE (ex. Pulse-Gateway MAG4610)

2013-07-11 2.2
- add memory-usage for checkpoint
- add detection for cpx

2013-07-09 2.1.1
- skip non-interface files in /sys/class/net for servertype linuxlocal (Thanks Sven Nierlein)
- better error handling on unwritable statefiles/dirs

2013-06-12 2.1
- added "--servertype ifmib" so you can use "--mode interface*" with every kind of ifmib-capable device

2013-06-01 2.0
- added support for AVM FRITZ!DECT 200 smart plug

2013-05-27 1.9.8.1
- bugfix for the bugfix in commandline options (Thanks webspace Mario)

2013-05-23 1.9.8
- add Brocade Communications Systems, Inc. ICX6610-24-HPOE, IronWare 
- bugfix in commandline options (Thanks TheCry)

2013-05-17 1.9.7.4
- added another fallback for snmp-get_entries
- fixed a bug in uptime (only first minute after reboot)

2013-04-20 1.9.7.3
- fixed a bug in snmpwalk simulation and savestate

2013-04-08 1.9.7.2
- bugfix, interfaces were shown twice in list-interfaces

2013-03-26 1.9.7.1
- set automatic thresholds for link-aggregation-availability

2013-03-25 1.9.7
- added link-aggregation-availability

2013-03-19 1.9.6
- fixed a bug in interface-*
- speedup in interface-* (with --name and 64bit)
- added a hostname/community hash to statefiles

2013-02-13 1.9.5.1
- fixed a bug deep inside snmp bulkwalks and lots of interfaces (Thanks Uestuen Oender)

2013-02-24 1.9.5
- add interface-availability

2013-02-11 1.9.4
- add Cisco Wireless LAN Controller 5500 

2013-02-11 1.9.3.1
- fixed a bug in statefiles with uppercase directory names. (Thanks Matthias Gallinger)

2013-02-10 1.9.3
- add blue coat sg600

2013-02-02 1.9.2
- removed my static ip from FRITZ!BOX interface-usage (Thanks Stef)

2013-01- 1.9.1
- fixed a bug in FFritz!BOX uptime (Thanks Lars Urban)

3013-01 1.9
- add uptime and interface-usage for AVM FRITZ!Box 7390