@@ -4,6 +4,7 @@
 
 2013-08-27 2.3
 - add Juniper IVE (ex. Pulse-Gateway MAG4610)
+- add count-connections for cisco asa
 
 2013-07-11 2.2
 - add memory-usage for checkpoint
